feat: React-native-expo 钱包第一次提交

--- a/app.json
+++ b/app.json
@@ -7,6 +7,10 @@
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
+    "extra": {
+      "API_BASE_URL": "http://localhost:8543",
+      "ENV": "development"
+    },
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
