--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "@types/react-native-dotenv": "^0.2.2",
+    "buffer": "^6.0.3",
+    "ethereumjs-wallet": "^1.0.2",
+    "ethers": "^6.13.2",
     "expo": "~51.0.28",
+    "expo-constants": "^16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -23,6 +28,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "fetch": "^1.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -36,6 +42,7 @@
     "@types/react": "~18.2.45",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
